--- a/src/resources/views/me/stored-news.hbs
+++ b/src/resources/views/me/stored-news.hbs
@@ -4,7 +4,7 @@
      <span class="material-icons" style="font-size:30px; color:rgb(88, 109, 12);">
        folder_delete
      </span>
-     <p class="me-1 ">Thùng rác</p>
+     <p class="me-1 ">Thùng rác ({{deletedCount}})</p>
     </a>
     <table class="table mt-4">
         <thead>
