--- a/src/public/styles/index.scss
+++ b/src/public/styles/index.scss
@@ -1,8 +1,7 @@
-@import 'variable';
-@import 'header';
-@import 'footer';
-@import 'mixins';
-@import 'extends';
+@import 'utilities/variable', 'utilities/mixins', 'utilities/extends';
+@import 'layout/header';
+@import 'layout/footer';
+@import 'layout/navbar';
 
 
 body {
@@ -32,28 +31,7 @@ section {
     }
 }
 
-.footer {
+img {
     width: 100%;
-    float: left;
-    height: 100 px;
-    background-color: $whiteT;
-    min-height: 125 px;
-
-    .footer__main {
-        margin: 0 px;
-        padding: 0 px;
-        width: 980 px;
-        float: inherit;
-        text-align: center;
-        vertical-align: top;
-
-        .license {
-            width: 440 px;
-            height: 100%;
-            margin: 10 px;
-            color: black;
-            padding-top: 16 px;
-            text-align: center;
-        }
-    }
+    height: 100%;
 }
