--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,5 +1,5 @@
-{{> header}}
-<p>{{newsList}}</p>
+{{!-- {{> header}} --}}
+{{!-- <p>{{newsList}}</p> --}}
 
 <div class="mt-4">
     <div class="row">
