--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -12,6 +12,7 @@
     </head>
     <body>
         <div class="app">
+            {{> header}}
             {{> nav}}
             <div class="container">
                 {{{body}}}
@@ -20,3 +21,10 @@
         </div>
     </body>
 </html>
+
+<script type="text/javascript">
+   window.addEventListener("scroll", function(){
+       var navbar1 = document.getElementById("mainNav");
+       navbar1.classList.toggle("sticky", window.scrollY > 0);
+   })
+</script>
