--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,12 +1,27 @@
-<header class="masthead" style="background-image: url('/img/header.jpg'); background-repeat: no-repeat; background-origin: content-box; background-size: contain;">
-    <div class="container position-relative px-4 px-lg-5">
-        <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-md-10 col-lg-8 col-xl-7">
-                <div class="site-heading">
-                    <h1>Clean Blog</h1>
-                    <span class="subheading">A Blog Theme by Start Bootstrap</span>
+<div>
+    <div class='container'>
+        <div class='title'>
+            <a href='http://tuyensinh.actvn.edu.vn/' class='logo'><img
+                    src='/https://i.imgur.com/4Ya1Epf.png'
+                    alt='logo'
+                /></a>
+
+            <div class='right-item flex-list'>
+                <div
+                    class='fmr-search'
+                    data-toggle='modal'
+                    data-target='#myModalsearch'
+                >
+                    <input
+                        type='text'
+                        class='form-control'
+                        placeholder='Tìm kiếm...'
+                    />
+                    <a href='javascript:void(0)' class='btn-modal btn-search'><i
+                            class='fas fa-search'
+                        ></i></a>
                 </div>
             </div>
         </div>
     </div>
-</header>
+</d>
