--- a/src/public/styles/utilities/_mixins.scss
+++ b/src/public/styles/utilities/_mixins.scss
@@ -4,3 +4,8 @@
     padding: 5px 10px;
     color: wheat;
 }
+
+@mixin error($bgColor){
+    border: 1px solid $bgColor;
+    background-color: #fdd;
+}
