--- a/src/public/styles/layout/_header.scss
+++ b/src/public/styles/layout/_header.scss
@@ -1,21 +1,74 @@
 @import '../utilities/variable';
 
-header {
-    background-color: $background-color;
-    height: 50vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: $text-color;
+.header {
+    display: block;
+    height: 4rem;
+    position: relative;
 
-    .header-image {
-        margin-top: 65px;
+    .header-content {
+        display: flex;
+        margin-bottom: 0;
+        align-items: center;
         width: 100%;
-        height: 100%;
-        background-repeat: no-repeat;
-        background-origin: content-box;
-        background-size: contain;
+        justify-content: space-between;
+
+        .logo {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            .logo-icon {
+                width: 3.6rem;
+                height: 3.6rem;
+                margin-right: auto;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+
+                .logo-content {
+                    display: flex;
+                }
+            }
+
+            .logo-title {
+                font-size: 1.2rem;
+                margin-left: 0.5rem;
+            }
+        }
+
+
+        .search {
+            .search-item {
+                display: flex;
+                position: relative;
+                height: 100%;
+
+                .form-search {
+                    display: block;
+                    width: 100%;
+                    height: 34px;
+                    padding: 6px 12px;
+                    font-size: 14px;
+                    line-height: 1.4;
+                    color: #555;
+                    background-color: #fff;
+                    background-image: none;
+                    border: 1px solid #ccc;
+                    border-bottom-left-radius: 0.5rem;
+                    border-top-left-radius: 0.5rem;
+                    box-shadow: inset 0 1px 1px rgba(109, 83, 83, 0.08);
+                    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+                }
+
+                .btn-search {
+                    border-top-right-radius: 0.5rem;
+                    border-bottom-right-radius: 0.5rem;
+                    padding: 0.2rem;
+                    color: #fff;
+                }
+            }
+        }
     }
 
 }
