--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,27 +1,30 @@
-<div>
-    <div class='container'>
-        <div class='title'>
-            <a href='http://tuyensinh.actvn.edu.vn/' class='logo'><img
-                    src='/https://i.imgur.com/4Ya1Epf.png'
-                    alt='logo'
-                /></a>
-
-            <div class='right-item flex-list'>
-                <div
-                    class='fmr-search'
-                    data-toggle='modal'
-                    data-target='#myModalsearch'
-                >
-                    <input
-                        type='text'
-                        class='form-control'
-                        placeholder='Tìm kiếm...'
-                    />
-                    <a href='javascript:void(0)' class='btn-modal btn-search'><i
-                            class='fas fa-search'
-                        ></i></a>
-                </div>
+<div class='header'>
+    <div class='container header-content'>
+        <div class='logo'>
+            <div class='logo-icon'>
+                <a href='http://tuyensinh.actvn.edu.vn/' class='logo-content'>
+                    <img src='https://i.imgur.com/4Ya1Epf.png' alt='logo' />
+                </a>
+            </div>
+            <h3 class='logo-title'>Tuyển sinh đại học</h3>
+        </div>
+        <div class='search'>
+            <div
+                class='search-item'
+                data-toggle='modal'
+                data-target='#myModalsearch'
+            >
+                <input
+                    type='text'
+                    class='form-search'
+                    placeholder='Tìm kiếm...'
+                />
+                <a href='#' class='btn btn-info btn-search'>
+                    <span class='material-icons'>
+                        search
+                    </span>
+                </a>
             </div>
         </div>
     </div>
-</d>
+</div>
