--- a/src/public/styles/utilities/_variable.scss
+++ b/src/public/styles/utilities/_variable.scss
@@ -2,36 +2,40 @@ $background-color: #ffffff;
 $text-color: #424242;
 $blue-light: #22a7f0;
 $whiteT: #f4f4f4;
-$white: '#FFF';
-$dark: '#000';
-$darkText: '#424242';
-$darkTile: '#343434';
-$black: '#1E1E1E';
-$primary: '#04555c';
-$light: '#f9f9f9';
-$lightT: '#e1e8e9';
-$blueLight: '#22a7f0';
-$deepSkyBlue: '#19b5fe';
-$blueChambray: '#3a539b';
-$blueDam: '#6E73FA';
-$airForceBlue: '#4b77be';
-$sanMarino: '#446cb3';
-$jacksonsPurple: '#1f3a93';
-$blueN: '#4C74A3';
-$blueTile: '#42628F';
-$jellyBean: '#2574a9';
-$whiteT: '#f1f1f1';
-$whiteG: '#f4f4f4';
-$gray: '#cbcdcb';
-$greyLynch: '#6c7a89';
-$greyHoki: '#67809f';
-$greenTee: '#38D45B';
-$yellowT: '#eaff00';
-$red: '#f03434';
-$redM: '#966565';
-$pomegranate: '#f03434';
-$pink: '#CA71B6';
-$pinkHon: '#25a279';
-$orange: '#f5a623';
-$orangeGon: '#ff8800';
-$transparent: "#ffffff00";
+$white: #FFF;
+$black: #000;
+$cyan: #00FFFF;
+$dark: #343a40;
+$darkM: #1E1E1E;
+$darkText: #424242;
+$darkSub: #696969;
+$darkTile: #343434;
+$primary: #04555c;
+$light: #f9f9f9;
+$lightT: #e1e8e9;
+$lightC: #ddfafa;
+$blueLight: #22a7f0;
+$deepSkyBlue: #19b5fe;
+$blueChambray: #3a539b;
+$blueDam: #6E73FA;
+$airForceBlue: #4b77be;
+$sanMarino: #446cb3;
+$jacksonsPurple: #1f3a93;
+$blueN: #4C74A3;
+$blueTile: #42628F;
+$jellyBean: #2574a9;
+$whiteT: #f1f1f1;
+$whiteG: #f4f4f4;
+$gray: #cbcdcb;
+$greyLynch: #6c7a89;
+$greyHoki: #67809f;
+$greenTee: #38D45B;
+$yellowT: #eaff00;
+$red: #f03434;
+$redM: #966565;
+$pomegranate: #f03434;
+$pink: #CA71B6;
+$pinkHon: #25a279;
+$orange: #f5a623;
+$orangeGon: #ff8800;
+$transparent: #ffffff00;
