--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -8,22 +8,30 @@
             </div>
             <h3 class='logo-title'>Tuyển sinh đại học</h3>
         </div>
-        <div class='search'>
-            <div
-                class='search-item'
-                data-toggle='modal'
-                data-target='#myModalsearch'
-            >
-                <input
-                    type='text'
-                    class='form-search'
-                    placeholder='Tìm kiếm...'
-                />
-                <a href='#' class='btn btn-info btn-search'>
-                    <span class='material-icons'>
-                        search
-                    </span>
-                </a>
+        <div class='right-content'>
+            <div class='row'>
+                <div class='admission-btn'>
+                    {{!-- <button class='button-3' role='button'>Nhập học trực tuyến</button> --}}
+                    <button class="button-1" role="button">Nộp hồ sơ online</button>
+                </div>
+                <div class='search'>
+                    <div
+                        class='search-item'
+                        data-toggle='modal'
+                        data-target='#myModalsearch'
+                    >
+                        <input
+                            type='text'
+                            class='form-search'
+                            placeholder='Tìm kiếm...'
+                        />
+                        <a href='#' class='btn btn-info btn-search'>
+                            <span class='material-icons'>
+                                search
+                            </span>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
