--- a/src/public/styles/components/_banner.scss
+++ b/src/public/styles/components/_banner.scss
@@ -1,19 +1,23 @@
 .banner {
     background-color: $background-color;
-    height: 50vh;
+    height: 20vh;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     color: $text-color;
 
-    .banner-image {
-        margin-top: 65px;
-        width: 100%;
-        height: 100%;
-        background-repeat: no-repeat;
-        background-origin: content-box;
-        background-size: contain;
+    img {
+        object-fit: contain;
     }
+
+    // .banner-image {
+    //     margin-top: 65px;
+    //     width: 100%;
+    //     height: 100%;
+    //     background-repeat: no-repeat;
+    //     background-origin: content-box;
+    //     background-size: contain;
+    // }
 
 }
