--- a/src/public/styles/index.scss
+++ b/src/public/styles/index.scss
@@ -2,7 +2,10 @@
 @import 'layout/header';
 @import 'layout/footer';
 @import 'layout/navbar';
-
+@import 'pages/home';
+@import 'components/banner';
+@import 'components/button';
+@import 'themes/background';
 
 body {
     background-color: $background-color;
@@ -35,3 +38,4 @@ img {
     width: 100%;
     height: 100%;
 }
+
