--- a/src/public/styles/pages/_home.scss
+++ b/src/public/styles/pages/_home.scss
@@ -10,6 +10,8 @@
             height: 20rem;
             border-radius: 0.6rem;
             box-sizing: border-box;
+            border: 1px solid #426afd;
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
             .stylized__item {
                 width: 50%;
@@ -33,12 +35,12 @@
 
                     h3 {
                         font-size: 1rem;
-                        color: $darkText;
+                        color: $whiteT;
                     }
 
                     .desc {
                         font-size: 0.75rem;
-                        color: $darkSub;
+                        color: $lightT;
                         margin-bottom: 0;
                     }
                 }
@@ -50,6 +52,7 @@
             width: 100%;
             border-radius: 0.6rem;
             overflow: hidden;
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
             &>img {
                 width: 100%;
@@ -64,6 +67,7 @@
             min-height: 20rem;
             border-radius: 0.6rem;
             box-sizing: border-box;
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         }
     }
 }
