--- a/src/public/styles/themes/_background.scss
+++ b/src/public/styles/themes/_background.scss
@@ -16,6 +16,10 @@
     @include bgColor($transparent);
 }
 
-.bg-lightC {
-    @include bgColor($lightC);
+.bg-lightEB {
+    @include bgColor($eastBay);
+}
+
+.bg-lightBlue {
+    @include bgColor($lightBlue);
 }
