--- a/src/public/styles/utilities/_variable.scss
+++ b/src/public/styles/utilities/_variable.scss
@@ -10,10 +10,11 @@ $darkM: #1E1E1E;
 $darkText: #424242;
 $darkSub: #696969;
 $darkTile: #343434;
+$eastBay:#474580;
 $primary: #04555c;
 $light: #f9f9f9;
 $lightT: #e1e8e9;
-$lightC: #ddfafa;
+$lightBlue: #ddfafa;
 $blueLight: #22a7f0;
 $deepSkyBlue: #19b5fe;
 $blueChambray: #3a539b;
