--- a/src/public/styles/components/_button.scss
+++ b/src/public/styles/components/_button.scss
@@ -16,7 +16,7 @@
   margin: 0;
   outline: none;
   overflow: visible;
-  padding: 0.5rem 16px;
+  padding: 0.42rem 1rem;
   text-align: center;
   text-transform: uppercase;
   touch-action: manipulation;
